# siputar

./: CONTRIBUTING.md  LICENSE  README.md  package.json
.github/: MACOS_CODE_SIGNING.md  RELEASE.md  SETUP_CHECKLIST.md  dependabot.yml
.github/workflows/: build.yml  release.yml
docs/: en.html  index.html  script.js  style.css
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity_log.rs  commands.rs  elevenlabs.rs  keychain.rs  lib.rs  main.rs  scheduler.rs  tray.rs  types.rs
src-tauri/tests/: keychain_test.rs
src/lib/components/: ConfigPanel.svelte  ConfirmDialog.svelte  CreditsDisplay.svelte  DefaultMediaItem.svelte  DefaultMediaPicker.svelte  MediaEditor.svelte  MediaItemChip.svelte  MiniPlayer.svelte  ScheduleCard.svelte  ScheduleEditor.svelte  ScheduleList.svelte  SettingsPanel.svelte  TTSGeneratorPanel.svelte  TTSHistoryCard.svelte  TTSHistoryList.svelte
src/lib/i18n/: en.ts  id.ts  index.svelte.ts
src/lib/stores/: config.svelte.ts  playback.svelte.ts  tts.svelte.ts  ui.svelte.ts
src/lib/types/: index.ts
src/lib/utils/: duration.ts  thumbnail.ts  time.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/app/: +layout.svelte
src/routes/app/audio/: +page.svelte
src/routes/app/schedules/: +page.svelte
src/routes/audio/: +page.svelte
src/routes/mini-player/: +layout.svelte  +page.svelte  +page.ts
src/routes/schedules/: +page.svelte
